# tiny-ode

./: .clang-format  .gitmodules  README.md  README_camke.md  README_standard.md  build.sh  camke.md  clang-format.sh  git.sh  mytest.cpp  standard.md
C/crypto/aes/: aes.h  build.sh  makefile  test.c
C/crypto/hash/: build.sh  md5.c  md5.h  sha1.h  sha512.c
C/crypto/hash_openssl/: build.sh  common.h  sha.h
C/crypto/rsa/: a.out  build.sh  ca.pub  rsa.c
C/crypto/simplify/: build.sh
C/driver/: README.md  build.sh  dev_demo_A.c  dev_test.c
C/open_lib/lib_curl/: demo.c  demo_curl.c
C/open_lib/lib_pcap/: demo.c  demo_pcap.c  readme.md
C/open_lib/lib_wss/: demo_websockets_s.c  readme.md
_leetcode_test/: README.md  test.py  test_.cpp
_leetcode_test/array_string/: test_121.cpp  test_134.cpp  test_42.cpp
_leetcode_test/grid/: test_210.cpp
_leetcode_test/interval/: test_452.cpp
_leetcode_test/list/: test_2.cpp
_leetcode_test/sliding_window/: test_30.cpp
advanced/: CMakeLists.txt  Makefile  run_demo.cpp  run_print.h  t.cpp
advanced/IO/: build.sh  demo.cpp  demo.h  input.cpp  input.h  math.c  memory.cpp  memory.h  string.h
advanced/STL/: Makefile  demo.cpp  list.cpp  list.h  map.cpp  map.h  set.cpp  set.h  stl.h  vector.cpp  vector.h  verctor.cpp  verctor.h
advanced/TYPE/: build.sh  demo.cpp  memory.cpp  memory.h  template.cpp  template.h  type.h
advanced/algorithm/: a.out  list_swap.cpp  sort.cpp
advanced/base/: base_debug.h  base_input.h  base_math.h  base_memory.h  base_string.h  class.cpp  demo.cpp  demo.h  demo_base.cpp  demo_class.cpp  input.h  math.c  math.h  memory.h  my_class.cpp  string.cpp  string.h
advanced/base_lib/: CMakeLists.txt  lib_chrono.h  lib_file.h  lib_thread.h  test.cpp
advanced/base_stl/: demo.cpp  demo_stl.cpp  stl_list.h  stl_map.h  stl_set.h  stl_vector.h
advanced/base_template/: demo_type.cpp  template.h
advanced/base_type/: demo.cpp  template.h
advanced/lib/: CMakeLists.txt  demo_lib.cpp  lib_chrono.h  lib_file.h  lib_thread.h
advanced/modules/: common.h  demo_modules.cpp  my_file.cpp  my_process.cpp  my_thread.cpp
advanced/project/: README.md  data.cpp
advanced/stdlib/: CMakeLists.txt  mychrono.h  myfile.h  mytest.cpp  mythread.h
advanced/stl/: demo_stl.cpp  map.h  set.h  stl_list.h  stl_map.h  stl_set.h  stl_vector.h
advanced/template/: demo_type.cpp  template.h
advanced/type/: demo.cpp  template.h
algorithm/: README.md  list_swap.cpp  sort.cpp
algorithm/alg_data/: my_list.cpp  my_list.h  my_search.cpp  my_sort.cpp  my_sort.h  my_tree.cpp  my_tree.h
algorithm/alg_sort/: a.out  my_list.cpp  my_list.h  my_search.cpp  my_sort.cpp  my_sort.h  my_tree.cpp  my_tree.h
algorithm/datatype/: data_list.cpp  data_tree.cpp
algorithm/leedcode/: common.h  test.cpp  test_.cpp
algorithm/leedcode/array_string/: test_121.cpp  test_122.cpp  test_13.cpp  test_134.cpp  test_135.cpp  test_380.cpp  test_42.cpp  test_45.cpp
algorithm/leedcode/double_pointer/: test_11.cpp  test_15.cpp  test_167.cpp
algorithm/leedcode/grid/: a.out  test_130.cpp  test_210.cpp
algorithm/leedcode/hashtable/: test_128.cpp  test_49.cpp
algorithm/leedcode/interval/: test_452.cpp  test_56.cpp
algorithm/leedcode/list/: test_138.cpp  test_146.cpp  test_2.cpp  test_25.cpp
algorithm/leedcode/matrix/: test_289.cpp  test_48.cpp  test_54.cpp
algorithm/leedcode/sliding_window/: test_209.cpp  test_3.cpp  test_30.cpp  test_76.cpp
algorithm/leedcode/stack/: a.out  test_15.cpp  test_224.cpp
algorithm/leedcode/tree/: test_101.cpp  test_105.cpp  test_124.cpp
algorithm/leetcode/: test.cpp
algorithm/leetcode/array_string/: test_135.cpp  test_380.cpp  test_45.cpp
algorithm/leetcode/double_pointer/: test_11.cpp  test_167.cpp
algorithm/leetcode/grid/: test_130.cpp
algorithm/leetcode/hashtable/: test_128.cpp
algorithm/leetcode/list/: test_138.cpp  (+2 more)
algorithm/pid/: a.out  pid_demo.cpp
algorithm/sort/: sort_base.cpp  sort_search.cpp
algorithms/advanced/: CMakeLists.txt  alg_list.h  alg_sort.h  my_list.cpp  my_sort.cpp  my_tree.cpp
algorithms/base/: CMakeLists.txt  my_search.cpp  my_tree.h  test_list.cpp  test_sort.cpp  test_tree.cpp
algorithms/crypto/: Makefile  md5.c  my_md5.c  my_md5.h  my_sha256.c  my_sha256.h  sha256.c  test_md5.c  test_sha256.c
algorithms/leetcode/: common.h
base_chain/: test_chain.cpp
base_process/: CMakeLists.txt  README.md  pro_lock.cpp  pro_test.cpp  pro_thread.cpp
code/: Makefile  log.sh
code/advanced/: config.ini  my_demo.cpp
code/advanced/modules/: CMakeLists.txt  README.md  common.h  my_process.cpp  my_thread.cpp  my_time.cpp
code/base/: memory.cpp  my_debug.cpp  my_io.cpp  my_ptr.cpp  stl_list.cpp  stl_map.cpp  stl_set.cpp  stl_vector.cpp  string.cpp  template_type.cpp
code/crypto/: README.md
code/fun_log/: Makefile  log.sh
code/fun_platform/: platform_type.h
code/log/: my_log.cpp  my_log_run.h
docs/: README.md
fun_log/: README.md  log.h  main.cpp
fun_platform/: platform_type.h
open_lib/lib_curl/: readme.md
open_lib/lib_pcap/: build.sh
open_lib/lib_ssl/: readme.md
open_lib/lib_wss/: demo_websockets_c.c
process/: pro_lock.cpp  pro_thread.cpp
qt/qt_console/: main.cpp
syntax/: CMakeLists.txt  README.md
syntax/advanced/: CMakeLists.txt  README.md  modules_file.cpp  modules_time.cpp  sig_signum.cpp  th_atomic.cpp  th_atomic.h  th_mutex.cpp  th_mutex.h  th_thread.cpp  th_thread.h
syntax/basic/: CMakeLists.txt  memory.cpp  my_dbg.cpp  my_dbg.h  my_io.cpp  my_io.h  my_ptr.cpp  my_ptr.h  my_task.h
syntax/platform/: Makefile  my_log  my_log.cpp  my_log.h  my_log_run.h  platform_type.h
third_part/open_lib/: README.md
tool/: CMakeLists.txt  README.md  a.out  build.sh  clang-format.sh  datatool.h  gtool.cpp  log.h  sort_base.cpp  sorttool.h  tool.cpp  tool_data.h  tool_gtest.cpp  tool_print_log.sh  tool_sort.h  toolsort.h
tool/gtest/: CMakeLists.txt  build.sh  gtest-all.cc  gtest.h  gtest_main.cc
tool/llgd/: CMakeLists.txt  README.md  build.sh  myprint.cpp  myprint.h  test.cpp
toolchain/: CMakeLists.txt  README.md  test_chain.cpp
type/: platform_type.h
(+70 files in other folders)
